--- a/public/index.html
+++ b/public/index.html
@@ -34,19 +34,11 @@
       rel="stylesheet"
     />
     <link
-      href="%PUBLIC_URL%assets/vendor/glightbox/css/glightbox.min.css"
-      rel="stylesheet"
-    />
-    <link
       href="%PUBLIC_URL%assets/vendor/remixicon/remixicon.css"
       rel="stylesheet"
     />
-    <link
-      href="%PUBLIC_URL%assets/vendor/swiper/swiper-bundle.min.css"
-      rel="stylesheet"
-    />
-    <!--     <link href="%PUBLIC_URL%assets/vendor/aos/aos.css" rel="stylesheet" />-->
-
+    <link href="%PUBLIC_URL%assets/vendor/aos/aos.css" rel="stylesheet" />
+    <link href="../src/index.css" rel="stylesheet" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -64,7 +56,6 @@
     <title>Debug Doodles</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -76,5 +67,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="assets/vendor/aos/aos.js"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Template Main JS File -->
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
